kqed_dev4/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Contact to Household</fullName>
        <description>Contact to Household Account Record</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Lapsed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Wrong Address</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACCOUNT_ID_LEADS__c</fullName>
        <description>Automatic assign this number when a lead is created, map this field from Leads to Accounts starting with an L and 9 digits, zero filled, 10 characters all together.</description>
        <displayFormat>L{0}</displayFormat>
        <inlineHelpText>Automatic assign this number when a lead is created, map this field from Leads to Accounts and use it to map against lead list.</inlineHelpText>
        <label>ACCOUNT_ID_LEADS</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <description>Related to Data Quality Score in Leads</description>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <description>Related to Data Quality Description</description>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Referral_Lead_Source__c</fullName>
        <description>Lead source executive name associated to WGBY, WGBH, WCAI as a dependent pick list for Lead Source field.</description>
        <inlineHelpText>Enter the executives name associated to WGBY, WGBH, WCAI who referred the lead.</inlineHelpText>
        <label>Executive Referral Lead Source</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Ben Godley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Overseers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Tribunes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Trustees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brigid Sullivan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henry Becton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamie Parker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanne Hopkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Igoe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jon Abbott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lance Ozier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Margaret Drain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rus Peotter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susan Dwyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinay Mehra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win Lenihan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_contacted__c</fullName>
        <label>Days since contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_created__c</fullName>
        <label>Days since created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_to_conversion__c</fullName>
        <label>Days to conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__First_Contact_Time_any__c</fullName>
        <inlineHelpText>The time when the first contact is made for this lead</inlineHelpText>
        <label>1st Contact Time (any)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__First_Contact_Time_phone__c</fullName>
        <inlineHelpText>The time when the first phone call is made for this lead</inlineHelpText>
        <label>1st Contact Time (phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Second_Contact_Time_any__c</fullName>
        <inlineHelpText>The time when the second contact is made for this lead</inlineHelpText>
        <label>2nd Contact Time (any)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Second_Contact_Time_phone__c</fullName>
        <inlineHelpText>The time when the second phone call is made for this lead</inlineHelpText>
        <label>2nd Contact Time (phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Third_Contact_Time_any__c</fullName>
        <inlineHelpText>The time when the third contact is made for this lead</inlineHelpText>
        <label>3rd Contact Time (any)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Third_Contact_Time_phone__c</fullName>
        <inlineHelpText>The time when the third phone call is made for this lead</inlineHelpText>
        <label>3rd Contact Time (phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__first_contact_data_any__c</fullName>
        <label>1st contact data (any)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__first_contact_data_phone__c</fullName>
        <label>1st contact data (phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_first_contact_any__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this lead is created to the first contact time, considering business hours. (e.g, if the lead was created on Monday 5 PM and first contacted on Tuesday 10 AM, hours to first contact is 1 hour)</inlineHelpText>
        <label>Hrs to 1st contact (any)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_first_contact_phone__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this lead is created to the first phone call, considering business hours. (e.g, if the lead was created on Monday 5 PM and first contacted on Tuesday 10 AM, hours to first contact is 1 hour)</inlineHelpText>
        <label>Hrs to 1st contact (phone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_second_contact_any__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this lead is created to the second contact time, considering business hours. (e.g, if the lead was created on Monday 5 PM and contacted on Tuesday 10 AM, hours to second contact is 1 hour)</inlineHelpText>
        <label>Hrs to 2nd contact (any)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_second_contact_phone__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this lead is created to the second phone call, considering business hours. (e.g, if the lead was created on Monday 5 PM and contacted on Tuesday 10 AM, hours to second contact is 1 hour)</inlineHelpText>
        <label>Hrs to 2nd contact (phone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_third_contact_any__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this lead is created to the third contact time, considering business hours. (e.g, if the lead was created on Monday 5 PM and contacted on Tuesday 10 AM, hours to third contact is 1 hour)</inlineHelpText>
        <label>Hrs to 3rd contact (any)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_third_contact_phone__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this lead is created to the third phone call, considering business hours. (e.g, if the lead was created on Monday 5 PM and contacted on Tuesday 10 AM, hours to third contact is 1 hour)</inlineHelpText>
        <label>Hrs to 3rd contact (phone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__second_contact_data_any__c</fullName>
        <label>2nd contact data (any)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__second_contact_data_phone__c</fullName>
        <label>2nd contact data (phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__third_contact_data_any__c</fullName>
        <label>3rd contact data (any)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__third_contact_data_phone__c</fullName>
        <label>3rd contact data (phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <description>Related to Industry</description>
        <label>Industry Category</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques/Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar/Recreational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafe/Eaterie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carribean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children/Maternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Unions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary/Kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink/Water/Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics/Computers/Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <description>Interest of the lead, multi select</description>
        <inlineHelpText>multi select list if the lead has multiple interests</inlineHelpText>
        <label>Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celtic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Expiration_Date__c</fullName>
        <description>Date the lead expires and needs to be removed from the database if it has not resulted in a donation.</description>
        <inlineHelpText>Date the lead expires and needs to be removed from the database if it has not resulted in a donation.</inlineHelpText>
        <label>Lead Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Most_Recent__c</fullName>
        <description>Most recent lead score from Eloqua</description>
        <label>Lead Score Most Recent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Lead Score for Eloqua integration</description>
        <label>Lead Score</label>
        <picklist>
            <picklistValues>
                <fullName>“A” Lead (70 – 100 points) – Plans to donate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>“B” Lead (50 – 70 points) – Plans to donate &lt;1year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>“C” Lead (30 – 50 points) – Might donate &lt; 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>“D” Lead (&lt; 30 points) – In the target market but not ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>List_Name__c</fullName>
        <description>Name of the list from which the name is rented</description>
        <label>List Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Rating__c</fullName>
        <label>Marketing Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Campaigns_Leads__c</fullName>
        <description>Number of campaigns a lead can be used in before removing from database if they have not donated.</description>
        <inlineHelpText>Number of campaigns a lead can be used in before removing from database if they have not donated.</inlineHelpText>
        <label>Number of Campaigns - Leads</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <description>Personal or Home Email</description>
        <label>Personal Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_LEAD_ID__c</fullName>
        <description>Automatic assign this number when a lead is created, map this field from Leads to Accounts starting with an L and 9 digits, zero filled, 10 characters all together.</description>
        <displayFormat>L{000000000}</displayFormat>
        <inlineHelpText>Automatic assign this number when a lead is created, map this field from Leads to Accounts and use it to map against lead list.</inlineHelpText>
        <label>SFDC LEAD ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Prospect__c</fullName>
        <label>Stage of the Prospect</label>
        <picklist>
            <picklistValues>
                <fullName>Identify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped/No Longer Considered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <description>The station for which the lead is a source.</description>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>KQED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>KQED+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WHCDB_Days_since_last_update_or_activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last update or activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>InternationalLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>International Leads</label>
        <queue>International Leads</queue>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>New_Leads_This_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New Leads This Week</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Prospects/Leads</label>
    </listViews>
    <listViews>
        <fullName>USLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>US Leads</label>
        <queue>US Leads</queue>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <recordTypes>
        <fullName>Household_Account</fullName>
        <active>true</active>
        <businessProcess>Contact to Household</businessProcess>
        <description>When converting a contact and associating it to an Account Record Type will equal Household</description>
        <label>Household Account</label>
    </recordTypes>
</CustomObject>